data/derived/comb/progs/unify/prog0518.ml.out
Characters 8-10:
  let _ = 12  10;;
          ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
